Test fixes.